# finitedepth-ifd

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/source/: conf.py  index.rst  plot-header.py  plot_pre_code  plot_pre_code.py
src/: conftest.py
src/finitedepth_ifd/: __init__.py
tests/: config.yml  conftest.py
