[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dipcoatimage-finitedepth-ifd"
version = "0.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "Measure finite depth dip coating roughness with integral Fréchet distance."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "dipcoatimage-finitedepth >= 2.0.5",
    "curvesimilarities >= 0.1.4"
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
    "matplotlib",
]
dev = [
    "flake8",
    "flake8-docstrings",
    "black",
    "isort",
    "docformatter",
    "doc8",
    "mypy",
    "dipcoatimage-finitedepth-ifd[doc]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true

[tool.doc8]
ignore = ["D004"]
ignore-path = [
    "src/*.egg-info",
    "doc/build",
    "doc/source/*.txt"
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
exclude = ["build"]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore-glob=doc/**/*.py --doctest-modules --doctest-glob=*.rst"